@@ -123,7 +123,7 @@ typedef struct {
     CARD8   CR13, CR30, CR31, CR32, CR33, CR34, CR35, CR36;
     CARD8   CR37, CR38, CR39, CR3A, CR40, CR41, CR42, CR43;
     CARD8   CR44, CR45, CR46, CR47, CR48, CR49, CR4A;
-    CARD8   CRA0, CRA1, CRA2, CR97, CR99, CR9B, CR9F;
+    CARD8   CR97, CR99, CR9B, CR9F, CRA0, CRA1, CRA2;
     CARD8   CRTCRegs[68];
 /*    CARD8   LCDRegs[0x40];*/
 } VIARegRec, *VIARegPtr;
