@@ -1,3 +1,13 @@
+2007-09-07  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>
+
+	* unichrome/via_driver.h:
+	* unichrome/via_vbe.c: (ViaVbeInitInt10),
+	(ViaVbeGetRefreshRateIndex), (ViaVbeGetActiveDevices),
+	(ViaVbeSetActiveDevices), (ViaVbeSetPanelExpansion),
+	(ViaVbeSetRefresh), (ViaVbeSetMode), (ViaVbeModePreInit):
+
+	VBE code clean up
+
 2007-09-02  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>
 
 	* unichrome/via_driver.c: (VIASetupDefaultOptions), (VIASave),
